create setting login regist界面

--- a/manifest.json
+++ b/manifest.json
@@ -223,7 +223,9 @@
 					"img/order.png",
 					"img/Blockbox.png",
 					"img/Selectionbox.png",
-					"order_detail.html"
+					"order_detail.html",
+					"fonts/mui.ttf",
+					"css/mui.min.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -241,7 +243,8 @@
 					"fonts/mui.ttf",
 					"css/mui.min.css",
 					"js/cookie_util.js",
-					"order_List.html"
+					"order_List.html",
+					"allocated_order.html"
 				],
 				"refer": [],
 				"priority": 0
